# narrative-surgeon

./: CLAUDE.md  PROJECT_VISION.md  README.md  critical-bug-fixes.md  dependency-audit.js  new-data-model.ts  new-store-implementation.ts  next.config.js  package-lock.json  package.json  refactoring-automation.js  refactoring-map.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
narrative-surgeon-desktop/: .env.production  .eslintrc.json  .gitignore  PERFORMANCE_REPORT.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md  analyze-imports.cjs  bloat-removal-report.json  build-verification-report.json  clean-dependencies.cjs  cleanup-log-1755186882257.txt  create-backup.sh  dependency-cleanup-report.json  execute-bloat-removal.cjs  fix-imports.cjs  import-analysis-report.json  import-fixes-report.json  jest.config.ts  migrate-to-single-manuscript.cjs  migration-report.json  new-layout.tsx  new-page.tsx  next.config.js  optimize-build.cjs  package-lock.json  package.json  performance-test.js  prepare-release.cjs  remove-bloat.cjs  rollback-deps.sh  tsc-report.txt  (+13 more)
narrative-surgeon-desktop/src-tauri/: Cargo.toml  tauri.conf.json
narrative-surgeon-desktop/src-tauri/src/: db.rs  error.rs  export.rs  fs.rs  lib.rs  menu.rs  window.rs
narrative-surgeon-desktop/src-tauri/tests/: fs_tests.rs  integration_tests.rs
(+354 files in other folders)
